@@ -1,7 +1,7 @@
-
 package com.example.WebTruyen.service.impl;
 
 import com.example.WebTruyen.dto.request.CreateChapterRequest;
+import com.example.WebTruyen.dto.response.ChapterDetailResponse;
 import com.example.WebTruyen.dto.response.ChapterResponse;
 import com.example.WebTruyen.dto.response.CreateChapterResponse;
 import com.example.WebTruyen.entity.enums.ChapterStatus;
@@ -15,13 +15,17 @@ import com.example.WebTruyen.repository.ChapterSegmentRepository;
 import com.example.WebTruyen.repository.StoryRepository;
 import com.example.WebTruyen.repository.VolumeRepository;
 import com.example.WebTruyen.service.ChapterService;
-import com.example.WebTruyen.service.StorageService; // Giả sử service này đã tồn tại
+import com.example.WebTruyen.service.StorageService;
+
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.safety.Safelist;
 import org.jsoup.select.Elements;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -34,6 +38,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ChapterServiceImpl implements ChapterService {
 
     private final StoryRepository storyRepository;
@@ -42,33 +47,34 @@ public class ChapterServiceImpl implements ChapterService {
     private final ChapterSegmentRepository chapterSegmentRepository;
     private final StorageService storageService;
 
-    // =========================================================================
-    // LOGIC TỪ NHÁNH author-create-content (Xử lý Content HTML)
-    // =========================================================================
+    // ============================================================
+    // AUTHOR - CREATE CHAPTER
+    // ============================================================
 
     @Override
     @Transactional
-    public CreateChapterResponse createChapterFromHtml(UserEntity currentUser, Long storyId, Long volumeId, CreateChapterRequest req) {
-        // --- validate volume & ownership
+    public CreateChapterResponse createChapterFromHtml(UserEntity currentUser,
+                                                       Long storyId,
+                                                       Long volumeId,
+                                                       CreateChapterRequest req) {
+
         VolumeEntity volume = volumeRepository.findById(volumeId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Volume not found"));
 
-        if (volume.getStory() == null || !volume.getStory().getId().equals(storyId)) {
+        if (!volume.getStory().getId().equals(storyId)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Volume does not belong to story");
         }
 
         StoryEntity story = volume.getStory();
-        if (story.getAuthor() == null || !story.getAuthor().getId().equals(currentUser.getId())) {
+        if (!story.getAuthor().getId().equals(currentUser.getId())) {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not owner of story");
         }
 
-        // --- pricing validation
         boolean isFree = req.getIsFree() == null ? true : req.getIsFree();
         if (!isFree && req.getPriceCoin() == null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "priceCoin required for paid chapter");
         }
 
-        // --- create chapter row
         Integer nextIndex = req.getSequenceIndex();
         if (nextIndex == null || nextIndex <= 0) {
             Integer maxIndex = chapterRepository.findMaxSequenceIndexByVolumeId(volumeId);
@@ -81,267 +87,204 @@ public class ChapterServiceImpl implements ChapterService {
                 .sequenceIndex(nextIndex)
                 .free(isFree)
                 .priceCoin(req.getPriceCoin())
-                .status(req.getStatus() == null ? ChapterStatus.draft : ChapterStatus.valueOf(req.getStatus().toLowerCase()))
+                .status(parseStatus(req.getStatus(), ChapterStatus.draft))
                 .createdAt(LocalDateTime.now())
                 .lastUpdateAt(LocalDateTime.now())
                 .build();
 
-        ChapterEntity savedChapter = chapterRepository.save(chapter);
+        ChapterEntity saved = chapterRepository.save(chapter);
+        processAndSaveContent(saved, req.getContentHtml());
 
-        // --- Process Content
-        processAndSaveContent(savedChapter, req.getContentHtml());
+        List<ChapterSegmentEntity> segs =
+                chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(saved.getId());
 
-        // --- prepare response
         CreateChapterResponse resp = new CreateChapterResponse();
-        resp.setChapterId(savedChapter.getId());
-        // Lấy lại segments đã lưu để trả về IDs (hoặc có thể optimize không cần query lại)
-        List<ChapterSegmentEntity> savedSegs = chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(savedChapter.getId());
-        List<Long> ids = savedSegs.stream().map(ChapterSegmentEntity::getId).collect(Collectors.toList());
-        resp.setSegmentIds(ids);
-        resp.setSegmentCount(ids.size());
+        resp.setChapterId(saved.getId());
+        resp.setSegmentIds(segs.stream().map(ChapterSegmentEntity::getId).toList());
+        resp.setSegmentCount(segs.size());
+
         return resp;
     }
 
+    // ============================================================
+    // AUTHOR - UPDATE CHAPTER
+    // ============================================================
+
     @Override
     @Transactional
-    public CreateChapterResponse updateChapterFromHtml(UserEntity currentUser, Long storyId, Long volumeId, Long chapterId, CreateChapterRequest req) {
-        VolumeEntity volume = volumeRepository.findById(volumeId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Volume not found"));
-
-        if (volume.getStory() == null || !volume.getStory().getId().equals(storyId)) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Volume does not belong to story");
-        }
-
-        StoryEntity story = volume.getStory();
-        if (story.getAuthor() == null || !story.getAuthor().getId().equals(currentUser.getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not owner of story");
-        }
+    public CreateChapterResponse updateChapterFromHtml(UserEntity currentUser,
+                                                       Long storyId,
+                                                       Long volumeId,
+                                                       Long chapterId,
+                                                       CreateChapterRequest req) {
 
         ChapterEntity chapter = chapterRepository.findByIdAndVolume_Id(chapterId, volumeId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Chapter not found"));
 
-        boolean isFree = req.getIsFree() == null ? true : req.getIsFree();
-        if (!isFree && req.getPriceCoin() == null) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "priceCoin required for paid chapter");
+        if (!chapter.getVolume().getStory().getAuthor().getId().equals(currentUser.getId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not owner");
         }
 
-        if (req.getTitle() == null || req.getTitle().trim().isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Title is required");
-        }
-
-        chapter.setTitle(req.getTitle().trim());
-        chapter.setFree(isFree);
+        chapter.setTitle(req.getTitle());
+        chapter.setFree(req.getIsFree());
         chapter.setPriceCoin(req.getPriceCoin());
-        ChapterStatus nextStatus = parseStatus(req.getStatus(), chapter.getStatus());
-        chapter.setStatus(nextStatus);
+        chapter.setStatus(parseStatus(req.getStatus(), chapter.getStatus()));
         chapter.setLastUpdateAt(LocalDateTime.now());
+
         chapterRepository.save(chapter);
 
-        // --- Update Content
-        // Xóa cũ
         chapterSegmentRepository.deleteByChapter_Id(chapterId);
-        chapterSegmentRepository.flush(); // Force execute delete
+        chapterSegmentRepository.flush();
 
-        // Thêm mới
         processAndSaveContent(chapter, req.getContentHtml());
+
+        List<ChapterSegmentEntity> segs =
+                chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(chapter.getId());
 
         CreateChapterResponse resp = new CreateChapterResponse();
         resp.setChapterId(chapter.getId());
-        List<ChapterSegmentEntity> savedSegs = chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(chapter.getId());
-        List<Long> ids = savedSegs.stream().map(ChapterSegmentEntity::getId).collect(Collectors.toList());
-        resp.setSegmentIds(ids);
-        resp.setSegmentCount(ids.size());
+        resp.setSegmentIds(segs.stream().map(ChapterSegmentEntity::getId).toList());
+        resp.setSegmentCount(segs.size());
+
         return resp;
     }
 
+    // ============================================================
+    // READER PAGE
+    // ============================================================
+
     @Override
     @Transactional(readOnly = true)
-    public Map<String, Object> getChapterContent(Long chapterId) {
-        ChapterEntity chapter = chapterRepository.findById(chapterId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Chapter not found"));
-        List<ChapterSegmentEntity> segs = chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(chapterId);
+    public ChapterDetailResponse getChapterDetail(Long chapterId) {
 
-        StringBuilder sb = new StringBuilder();
-        List<Map<String,Object>> segDtos = new ArrayList<>();
-        for (ChapterSegmentEntity s : segs) {
-            sb.append(s.getSegmentText());
-            Map<String,Object> m = new HashMap<>();
-            m.put("id", s.getId());
-            m.put("seq", s.getSeq());
-            m.put("html", s.getSegmentText());
-            segDtos.add(m);
-        }
+        ChapterEntity chapter = getChapterById(chapterId);
 
-        Map<String,Object> out = new HashMap<>();
-        out.put("chapterId", chapter.getId());
-        out.put("volumeId", chapter.getVolume() != null ? chapter.getVolume().getId() : null);
-        out.put("sequenceIndex", chapter.getSequenceIndex());
-        out.put("title", chapter.getTitle());
-        out.put("isFree", chapter.isFree());
-        out.put("priceCoin", chapter.getPriceCoin());
-        out.put("status", chapter.getStatus() != null ? chapter.getStatus().name() : null);
-        out.put("segments", segDtos);
-        out.put("fullHtml", sb.toString());
-        return out;
-    }
+        List<ChapterSegmentEntity> segments =
+                chapterSegmentRepository.findByChapter_IdOrderBySeqAsc(chapterId);
 
-    // =========================================================================
-    // HELPER METHODS (HTML Processing)
-    // =========================================================================
+        List<ChapterDetailResponse.ChapterSegmentResponse> segmentResponses =
+                segments.stream()
+                        .map(s -> ChapterDetailResponse.ChapterSegmentResponse.builder()
+                                .id(s.getId())
+                                .seq(s.getSeq())
+                                .segmentText(s.getSegmentText())
+                                .build())
+                        .collect(Collectors.toList());
 
-    private void processAndSaveContent(ChapterEntity chapter, String contentHtml) {
-        String replacedHtml = replaceBase64ImagesAndUpload(contentHtml);
-        String sanitized = sanitizeHtml(replacedHtml);
-        List<String> fragments = splitHtmlToBlocks(sanitized);
-
-        List<ChapterSegmentEntity> segs = new ArrayList<>();
-        int seq = 1;
-        for (String frag : fragments) {
-            ChapterSegmentEntity s = ChapterSegmentEntity.builder()
-                    .chapter(chapter)
-                    .seq(seq++)
-                    .segmentText(frag)
-                    .createdAt(LocalDateTime.now())
-                    .build();
-            segs.add(s);
-        }
-        if (!segs.isEmpty()) {
-            chapterSegmentRepository.saveAll(segs);
-        }
-    }
-
-    private ChapterStatus parseStatus(String raw, ChapterStatus fallback) {
-        if (raw == null || raw.trim().isEmpty()) {
-            return fallback == null ? ChapterStatus.draft : fallback;
-        }
-        try {
-            return ChapterStatus.valueOf(raw.trim().toLowerCase());
-        } catch (IllegalArgumentException ex) {
-            return fallback == null ? ChapterStatus.draft : fallback;
-        }
-    }
-
-    private String replaceBase64ImagesAndUpload(String html) {
-        if (html == null || html.isEmpty()) return html;
-        Document doc = Jsoup.parseBodyFragment(html);
-        Elements imgs = doc.select("img");
-        for (Element img : imgs) {
-            String src = img.attr("src");
-            if (src != null && src.startsWith("data:")) {
-                try {
-                    String url = storageService.saveBase64Image(src);
-                    if (url != null) img.attr("src", url);
-                } catch (Exception ex) {
-                    img.removeAttr("src");
-                }
-            }
-        }
-        return doc.body().html();
-    }
-
-    private String sanitizeHtml(String html) {
-        if (html == null) return "";
-        Safelist safelist = Safelist.relaxed()
-                .addTags("span")
-                .addAttributes("img", "src", "alt", "title", "width", "height")
-                .addAttributes("a", "href", "title", "target");
-        safelist.addProtocols("img", "src", "http", "https");
-        return Jsoup.clean(html, "", safelist, new Document.OutputSettings().prettyPrint(false));
-    }
-
-    private List<String> splitHtmlToBlocks(String sanitizedHtml) {
-        final String SEP = "<!--BLOCK_SEP-->";
-        if (sanitizedHtml == null || sanitizedHtml.trim().isEmpty()) return Collections.emptyList();
-
-        String normalized = sanitizedHtml.replaceAll("(?i)(<br\\s*/?>\\s*){2,}", SEP);
-        normalized = normalized.replaceAll("(?i)</p>\\s*<p", "</p>" + SEP + "<p");
-        normalized = normalized.replaceAll("(?i)<p>\\s*(?:<br\\s*/?>\\s*)*</p>", SEP);
-        normalized = normalized.replaceAll("(?i)<div>\\s*(?:<br\\s*/?>\\s*)*</div>", SEP);
-
-        String[] parts = normalized.split(Pattern.quote(SEP));
-        List<String> result = new ArrayList<>();
-        for (String part : parts) {
-            String t = part.trim();
-            if (t.isEmpty()) continue;
-            if (!t.matches("(?i)^\\s*<(?:(p|div|h|ul|ol|li|blockquote)\\b).*")) {
-                t = "<p>" + t + "</p>";
-            }
-            result.add(t);
-        }
-        return result;
-    }
-
-
-    // =========================================================================
-    // LOGIC CŨ TỪ NHÁNH HEAD (Cần bạn implement cụ thể sau)
-    // =========================================================================
-
-    @Override
-    public List<ChapterResponse> getChaptersByStory(Long storyId, Long authorId) {
-        // TODO: Implement logic lấy danh sách chapter
-        return List.of();
+        return ChapterDetailResponse.builder()
+                .id(chapter.getId())
+                .storyId(chapter.getVolume().getStory().getId())
+                .volumeId(chapter.getVolume().getId())
+                .title(chapter.getTitle())
+                .free(chapter.isFree())
+                .priceCoin(chapter.getPriceCoin())
+                .status(chapter.getStatus())
+                .sequenceIndex(chapter.getSequenceIndex())
+                .segments(segmentResponses)
+                .nextChapterId(getNextChapterId(chapterId))
+                .previousChapterId(getPreviousChapterId(chapterId))
+                .createdAt(chapter.getCreatedAt())
+                .lastUpdateAt(chapter.getLastUpdateAt())
+                .build();
     }
 
     @Override
-    public ChapterResponse getChapter(Long chapterId, Long authorId) {
-        // TODO: Implement logic lấy 1 chapter (DTO)
-        return null;
+    public Long getNextChapterId(Long chapterId) {
+        ChapterEntity chapter = getChapterById(chapterId);
+        return chapterRepository.findNextChapters(
+                chapter.getVolume().getId(),
+                chapter.getSequenceIndex()
+        ).stream().findFirst().map(ChapterEntity::getId).orElse(null);
     }
 
     @Override
-    public void deleteChapter(Long chapterId, Long authorId) {
-        // TODO: Implement logic xóa mềm hoặc xóa cứng
+    public Long getPreviousChapterId(Long chapterId) {
+        ChapterEntity chapter = getChapterById(chapterId);
+        return chapterRepository.findPreviousChapters(
+                chapter.getVolume().getId(),
+                chapter.getSequenceIndex()
+        ).stream().findFirst().map(ChapterEntity::getId).orElse(null);
     }
 
-    @Override
-    public ChapterResponse publishChapterNow(Long chapterId, Long authorId) {
-        // TODO: Logic publish ngay lập tức
-        return null;
-    }
+    // ============================================================
+    // COMMON METHODS
+    // ============================================================
 
     @Override
     public ChapterEntity getChapterById(Long chapterId) {
         return chapterRepository.findById(chapterId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Chapter not found"));
     }
-}
 
-//
-//package com.example.WebTruyen.service.impl;
-//
-//
-//import com.example.WebTruyen.dto.response.ChapterResponse;
-//import com.example.WebTruyen.entity.model.Content.ChapterEntity;
-//import com.example.WebTruyen.service.ChapterService;
-//import org.springframework.stereotype.Service;
-//import java.util.List;
-//
-//@Service // QUAN TRỌNG: Phải có dòng này thì lỗi mới hết
-//public class ChapterServiceImpl implements ChapterService {
-//
-//    @Override
-//    public List<ChapterResponse> getChaptersByStory(Long storyId, Long authorId) {
-//        // Tạm thời để return null hoặc empty để test app
-//        return List.of();
-//    }
-//
-//    @Override
-//    public ChapterResponse getChapter(Long chapterId, Long authorId) {
-//        return null;
-//    }
-//
-//    @Override
-//    public void deleteChapter(Long chapterId, Long authorId) {
-//    }
-//
-//    @Override
-//    public ChapterResponse publishChapterNow(Long chapterId, Long authorId) {
-//        return null;
-//    }
-//
-//    @Override
-//    public ChapterEntity getChapterById(Long chapterId) {
-//        // Viết logic tìm chapter ở đây (ví dụ dùng ChapterRepository)
-//        return null;
-//    }
-//}
+    private ChapterStatus parseStatus(String raw, ChapterStatus fallback) {
+        if (raw == null) return fallback;
+        try {
+            return ChapterStatus.valueOf(raw.toLowerCase());
+        } catch (Exception e) {
+            return fallback;
+        }
+    }
+
+    private void processAndSaveContent(ChapterEntity chapter, String html) {
+
+        if (html == null || html.isEmpty()) return;
+
+        Document doc = Jsoup.parseBodyFragment(html);
+        Elements imgs = doc.select("img");
+
+        for (Element img : imgs) {
+            String src = img.attr("src");
+            if (src.startsWith("data:")) {
+                String url = storageService.saveBase64Image(src);
+                img.attr("src", url);
+            }
+        }
+
+        String sanitized = Jsoup.clean(
+                doc.body().html(),
+                Safelist.relaxed()
+        );
+
+        String[] blocks = sanitized.split("(?i)(<br\\s*/?>\\s*){2,}");
+
+        List<ChapterSegmentEntity> segs = new ArrayList<>();
+        int seq = 1;
+        for (String block : blocks) {
+            if (block.trim().isEmpty()) continue;
+
+            segs.add(ChapterSegmentEntity.builder()
+                    .chapter(chapter)
+                    .seq(seq++)
+                    .segmentText(block)
+                    .createdAt(LocalDateTime.now())
+                    .build());
+        }
+
+        chapterSegmentRepository.saveAll(segs);
+    }
+
+    // Unimplemented methods from interface (temporary)
+    @Override
+    public List<ChapterResponse> getChaptersByStory(Long storyId, Long authorId) {
+        return List.of();
+    }
+
+    @Override
+    public ChapterResponse getChapter(Long chapterId, Long authorId) {
+        return null;
+    }
+
+    @Override
+    public void deleteChapter(Long chapterId, Long authorId) {
+    }
+
+    @Override
+    public ChapterResponse publishChapterNow(Long chapterId, Long authorId) {
+        return null;
+    }
+
+    @Override
+    public Map<String, Object> getChapterContent(Long chapterId) {
+        return Map.of();
+    }
+}
